# pyspark-delta

./: README.md  examples.ipynb  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml
BRONZE/sales/: .part-00000-83354c29-8f0f-495b-bb42-ce0f14fb38fc-c000.snappy.parquet.crc  .part-00000-c011e4ce-8e37-481d-bf27-5ed28360315f-c000.snappy.parquet.crc  .part-00003-14d11989-983e-456e-ba0f-5bc8fe0e3792-c000.snappy.parquet.crc  .part-00006-4eb36ae4-243b-445e-9d14-dccfd97096af-c000.snappy.parquet.crc  .part-00009-310d30d3-8ea7-403b-bb72-971d03568846-c000.snappy.parquet.crc  .part-00012-eae068ae-f474-475f-bbec-98c2b3fec27d-c000.snappy.parquet.crc  .part-00015-54939616-2b09-4994-8afb-fbaa2725d70e-c000.snappy.parquet.crc  part-00000-83354c29-8f0f-495b-bb42-ce0f14fb38fc-c000.snappy.parquet  part-00000-d8c235cd-181d-46de-add8-b431740cd192-c000.snappy.parquet  part-00003-14d11989-983e-456e-ba0f-5bc8fe0e3792-c000.snappy.parquet  part-00006-4eb36ae4-243b-445e-9d14-dccfd97096af-c000.snappy.parquet  part-00009-310d30d3-8ea7-403b-bb72-971d03568846-c000.snappy.parquet  part-00012-eae068ae-f474-475f-bbec-98c2b3fec27d-c000.snappy.parquet  part-00015-54939616-2b09-4994-8afb-fbaa2725d70e-c000.snappy.parquet
BRONZE/sales/_delta_log/: .00000000000000000000.crc.crc  .00000000000000000000.json.crc  .00000000000000000001.crc.crc  .00000000000000000001.json.crc  .00000000000000000002.crc.crc  .00000000000000000002.json.crc  .00000000000000000003.checkpoint.parquet.crc  .00000000000000000003.json.crc  .00000000000000000004.crc.crc  .00000000000000000004.json.crc  ._last_checkpoint.crc  (+3 more)
