[tool.poetry]
name = "pyspark-delta"
version = "0.1.0"
description = "Exemplos de usos de delta tables com pyspark"
authors = ["Alberto Oliveira Barbosa <albertobarbosa115@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pyspark = "4.0.0"
delta-spark = "4.0.0"
jupyterlab = "^4.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
